[tool.poetry]
name = "option-pricing"
version = "0.1.0"
description = ""
authors = ["benisbuzz <ben@danziger.uk>"]
readme = "README.md"
packages = [{include = "option_pricing"}]

[tool.poetry.dependencies]
python = ">=3.10 <3.13"
pandas = "^2.1.2"
numpy = "^1.26.1"
ipython = "^8.17.2"
ipykernel = "^6.26.0"
scipy = "^1.11.4"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
yfinance = "^0.2.32"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
